[Debug] Referencing `m_processPool` in `~WebProcessProxy()` causes a crash https://bugs.webkit.org/show_bug.cgi?id=264178

Reviewed by Chris Dumez.

Cached `WebProcess`es can be destroyed as a result of clearing
`WebProcessPool`'s cache during its destruction.

In this case, referencing `m_processPool` will fail because its deletion
has already begun.

* Source/WebKit/UIProcess/WebProcessProxy.cpp:
(WebKit::WebProcessProxy::~WebProcessProxy):

Canonical link: https://commits.webkit.org/270209@main